rrr (1.30-3.0) bookworm; urgency=medium

  * Running development release

  * Changes:

  * Features:
    * Single thread mode using -S argument for low resource operation or
      debugging
    * Support HTTP3 over QUIC in HTTP server and HTTP client

  * Improvements:
    * Disable aggressive GCing in JS module to reduce CPU usage

  * Fixes:
    * Crash in HTTP server if empty content type was passed from sender module
    * 10ms delay for all requests in HTTP server due to a poll timeout
    * In JS module, run GC more often if needed to avoid max number of persistables
      being exceeded under high load.

  * Under the hood:
    * Cache last chdir in message database to reduce the number of this syscall

  * Other:

 -- Atle Solbakken <atle@goliathdns.no>  Mon, 11 Mar 2024 12:32:27 +0100

rrr (1.29-2) bookworm; urgency=medium

  * Changes:
    * In route definition, the I operator is replaced with D. Existing programs
      must be updated to prevent warning from being printed.
    * Changed signatures for processor functions by adding a new last argument
      'method'. Existing scripts MAY BREAK and should be updated. Refer to
      the rrr.conf.5 manual page for correct function signatures.
    * Set process and thread names on OS-es where this is possible. This can
      assist when debugging for instance CPU usage.

  * Features:
    * Match generated messages in httpclient with their corresponding message
      triggering the query by using a report tag
    * Route messages leaving an instance to specific reader instances by topic
      or array tags
    * New parameter in httpclient to control timeout of low priority messages
      specifically
    * New array value "hdlc" for parsing HDLC messages
    * Ability in file module to write to files and devices among other new
      configuration parameters
    * New conversion type "hchar2str" in mangler module to convert individual
      bytes to strings